vendor/meme/src/cisml.h

typedef struct cisml CISML_T;
typedef struct cisml_match_it CISML_MATCH_IT_T;
typedef struct multi_pattern MULTI_PATTERN_T;
typedef struct multi_pattern_match MULTI_PATTERN_MATCH_T;
typedef struct pattern PATTERN_T;
typedef struct scanned_sequence SCANNED_SEQUENCE_T;
typedef struct matched_element MATCHED_ELEMENT_T;
CISML_T *allocate_cisml(
  const char *program_name,
  const char *command_line,
  const char *pattern_file,
  const char *sequence_file
);
void free_cisml(CISML_T *cisml);
char *get_cisml_program_name(CISML_T *cisml);
char *get_cisml_command_line(CISML_T *cisml);
char *get_cisml_pattern_file(CISML_T *cisml);
char *get_cisml_sequence_file(CISML_T *cisml);
void set_cisml_background_file(CISML_T *cisml, char *background_file);
char *get_cisml_background_file(CISML_T *cisml);
void set_cisml_pattern_pvalue_cutoff(
  CISML_T *cisml,
  double pattern_pvalue_cutoff
);
void clear_cisml_pattern_pvalue_cutoff(CISML_T *cisml);
bool has_cisml_pattern_pvalue_cutoff(CISML_T *cisml);
double get_cisml_pattern_pvalue_cutoff(CISML_T *cisml);
void set_cisml_sequence_pvalue_cutoff(
  CISML_T *cisml,
  double sequence_pvalue_cutoff
);
void clear_cisml_sequence_pvalue_cutoff(CISML_T *cisml);
bool has_cisml_sequence_pvalue_cutoff(CISML_T *cisml);
double get_cisml_sequence_pvalue_cutoff(CISML_T *cisml);
int get_cisml_num_passing_cutoff(CISML_T *cisml);
void set_cisml_site_pvalue_cutoff(CISML_T *cisml, double site_pvalue_cutoff);
void clear_cisml_site_pvalue_cutoff(CISML_T *cisml);
bool has_cisml_site_pvalue_cutoff(CISML_T *cisml);
double get_cisml_site_pvalue_cutoff(CISML_T *cisml);
void set_cisml_site_qvalue_cutoff(CISML_T *cisml, double site_qvalue_cutoff);
void clear_cisml_site_qvalue_cutoff(CISML_T *cisml);
bool has_cisml_site_qvalue_cutoff(CISML_T *cisml);
double get_cisml_site_qvalue_cutoff(CISML_T *cisml);
void set_cisml_sequence_filter(CISML_T *cisml, char *sequence_filter);
char *get_cisml_sequence_filter(CISML_T *cisml);
int get_cisml_num_multi_patterns(CISML_T *cisml);
MULTI_PATTERN_T **get_cisml_multi_patterns(CISML_T *cisml);
int get_cisml_num_patterns(CISML_T *cisml);
PATTERN_T **get_cisml_patterns(CISML_T *cisml);
int get_cisml_num_stored_matches(CISML_T *cisml);
void add_cisml_multi_pattern(CISML_T *cisml, MULTI_PATTERN_T* multi_pattern);
void add_cisml_pattern(CISML_T *cisml, PATTERN_T* pattern);
CISML_MATCH_IT_T *allocate_cisml_match_iterator(CISML_T *cisml);
void free_cisml_match_iterator(CISML_MATCH_IT_T *it);
MATCHED_ELEMENT_T *cisml_match_iterator_next(CISML_MATCH_IT_T *it);
MULTI_PATTERN_T *allocate_multi_pattern();
void free_multi_pattern(MULTI_PATTERN_T *multi_pattern);
void set_multi_pattern_score(MULTI_PATTERN_T *multi_pattern, double score);
bool has_multi_pattern_score(MULTI_PATTERN_T *multi_pattern);
void clear_multi_pattern_score(MULTI_PATTERN_T *multi_pattern);
double get_multi_pattern_score(MULTI_PATTERN_T *multi_pattern);
void set_multi_pattern_pvalue(MULTI_PATTERN_T *multi_pattern, double pvalue);
bool has_multi_pattern_pvalue(MULTI_PATTERN_T *multi_pattern);
void clear_multi_pattern_pvalue(MULTI_PATTERN_T *multi_pattern);
double get_multi_pattern_pvalue(MULTI_PATTERN_T *multi_pattern);
int get_multi_pattern_num_patterns(MULTI_PATTERN_T *multi_pattern);
MULTI_PATTERN_MATCH_T *get_multi_pattern_match(
  MULTI_PATTERN_T *multi_pattern
);
void set_multi_pattern_match(
  MULTI_PATTERN_T *multi_pattern,
  MULTI_PATTERN_MATCH_T *match
);
PATTERN_T **get_multi_pattern_patterns(MULTI_PATTERN_T *multi_pattern);
void add_multi_pattern_pattern(
  MULTI_PATTERN_T *multi_pattern,
  PATTERN_T* pattern
);
void multi_pattern_calculate_qvalues(
  int num_multi_pattern,
  MULTI_PATTERN_T **multi_patterns,
  ARRAY_T *sampled_pvalues
);
MULTI_PATTERN_MATCH_T *allocate_multi_pattern_match(
    char *seq_name,
    char *seq,
    int start,
    int stop,
    double pvalue
);
void free_multi_pattern_match(MULTI_PATTERN_MATCH_T *match);
void set_multi_pattern_match_evalue(MULTI_PATTERN_MATCH_T *match, double evalue);
double get_multi_pattern_match_pvalue(MULTI_PATTERN_MATCH_T* match);
void set_multi_pattern_match_qvalue(MULTI_PATTERN_MATCH_T *match, double qvalue);
double get_multi_pattern_match_qvalue(MULTI_PATTERN_MATCH_T* match);
PATTERN_T *allocate_pattern(char *accession, char *name);
void free_pattern(PATTERN_T *pattern);
void add_pattern_elements_to_scanned_seq(PATTERN_T *pattern);
bool add_pattern_matched_element(
  PATTERN_T *pattern,
  MATCHED_ELEMENT_T *element
);
bool set_pattern_max_stored_matches(PATTERN_T *pattern, int max);
void set_pattern_max_pvalue_retained(PATTERN_T *pattern, double max_pvalue);
int get_pattern_max_stored_matches(PATTERN_T *pattern);
int get_pattern_num_stored_matches(PATTERN_T *pattern);
bool get_pattern_is_complete(PATTERN_T *pattern);
void set_pattern_is_complete(PATTERN_T *pattern);
double get_pattern_max_pvalue_retained(PATTERN_T *pattern);
char *get_pattern_name(PATTERN_T* pattern);
char *get_pattern_accession(PATTERN_T* pattern);
void set_pattern_pvalue(PATTERN_T *pattern, double pvalue);
void clear_pattern_pvalue(PATTERN_T *pattern);
bool has_pattern_pvalue(PATTERN_T *pattern);
double get_pattern_pvalue(PATTERN_T* pattern);
bool has_pattern_qvalues(PATTERN_T *pattern);
void set_pattern_score(PATTERN_T *pattern, double score);
void clear_pattern_score(PATTERN_T *pattern);
bool has_pattern_score(PATTERN_T *pattern);
double get_pattern_score(PATTERN_T* pattern);
void set_pattern_db(PATTERN_T *pattern, char *db);
char *get_pattern_db(PATTERN_T* pattern);
void set_pattern_lsid(PATTERN_T *pattern, char *lsid);
char *get_pattern_lsid(PATTERN_T* pattern);
int get_pattern_num_scanned_sequences(PATTERN_T *pattern);
long get_pattern_num_scanned_positions(PATTERN_T *pattern);
int get_pattern_num_stored_matches(PATTERN_T *pattern);
MATCHED_ELEMENT_T **get_pattern_stored_matches(PATTERN_T *pattern);
MATCHED_ELEMENT_T **get_pattern_matched_elements(PATTERN_T *pattern);
void pattern_calculate_qvalues(
  PATTERN_T *pattern,
  ARRAY_T *sampled_pvalues
);
SCANNED_SEQUENCE_T **get_pattern_scanned_sequences(PATTERN_T *pattern);
SCANNED_SEQUENCE_T *allocate_scanned_sequence(
  char *accession,
  char *name,
  PATTERN_T *parent
);
void free_scanned_sequence(SCANNED_SEQUENCE_T *scanned_sequence);
void free_scanned_sequence_from_matched_elements(
		SCANNED_SEQUENCE_T *scanned_sequence
);
PATTERN_T *get_scanned_sequence_parent(
  SCANNED_SEQUENCE_T *scanned_sequence
);
char *get_scanned_sequence_name(SCANNED_SEQUENCE_T *scanned_sequence);
char *get_scanned_sequence_accession(SCANNED_SEQUENCE_T* scanned_sequence);
void set_scanned_sequence_pvalue(
  SCANNED_SEQUENCE_T *scanned_sequence,
  double pvalue
);
void clear_scanned_sequence_pvalue(SCANNED_SEQUENCE_T *scanned_sequence);
bool has_scanned_sequence_pvalue(SCANNED_SEQUENCE_T *scanned_sequence);
double get_scanned_sequence_pvalue(SCANNED_SEQUENCE_T* scanned_sequence);
void set_scanned_sequence_score(
  SCANNED_SEQUENCE_T *scanned_sequence,
  double score
);
void clear_scanned_sequence_score(SCANNED_SEQUENCE_T *scanned_sequence);
bool has_scanned_sequence_score(SCANNED_SEQUENCE_T *scanned_sequence);
double get_scanned_sequence_score(SCANNED_SEQUENCE_T* scanned_sequence);
void set_scanned_sequence_length(
  SCANNED_SEQUENCE_T *scanned_sequence,
  int length
);
void clear_scanned_sequence_length(SCANNED_SEQUENCE_T *scanned_sequence);
bool has_scanned_sequence_length(SCANNED_SEQUENCE_T *scanned_sequence);
int get_scanned_sequence_length(SCANNED_SEQUENCE_T* scanned_sequence);
void set_scanned_sequence_db(SCANNED_SEQUENCE_T *scanned_sequence, char *db);
char *get_scanned_sequence_db(SCANNED_SEQUENCE_T* scanned_sequence);
void set_scanned_sequence_lsid(
  SCANNED_SEQUENCE_T *scanned_sequence, char *lsid
);
char *get_scanned_sequence_lsid(SCANNED_SEQUENCE_T* scanned_sequence);
void add_scanned_sequence_matched_element(
  SCANNED_SEQUENCE_T *sequence,
  MATCHED_ELEMENT_T *element
);
void add_scanned_sequence_scanned_position(SCANNED_SEQUENCE_T *sequence);
int get_scanned_sequence_num_matched_elements(SCANNED_SEQUENCE_T *sequence);
long get_scanned_sequence_num_scanned_positions(SCANNED_SEQUENCE_T *sequence);
int get_scanned_sequence_num_matched_elements(SCANNED_SEQUENCE_T *sequence);
long get_scanned_sequence_num_scanned_positions(SCANNED_SEQUENCE_T *sequence);
MATCHED_ELEMENT_T **get_scanned_sequence_matched_elements(
    SCANNED_SEQUENCE_T *sequence
);
MATCHED_ELEMENT_T **get_scanned_sequence_matched_elements(
    SCANNED_SEQUENCE_T *sequence
);
MATCHED_ELEMENT_T *allocate_matched_element(
  int start,
  int stop,
  SCANNED_SEQUENCE_T *parent
);
MATCHED_ELEMENT_T *allocate_matched_element_without_inversion(
  int start,
  int stop,
  const char *seq,
  SCANNED_SEQUENCE_T *parent
);
MATCHED_ELEMENT_T *allocate_matched_element_with_score(
  int start,
  int stop,
  double score,
  double pvalue,
  SCANNED_SEQUENCE_T *parent
);
void free_matched_element(MATCHED_ELEMENT_T *element);
int get_matched_element_start(MATCHED_ELEMENT_T* matched_element);
void set_matched_element_start(MATCHED_ELEMENT_T* matched_element, int newstart);
int get_matched_element_stop(MATCHED_ELEMENT_T* matched_element);
void set_matched_element_stop(MATCHED_ELEMENT_T* element, int newstop);
void set_matched_element_score(
  MATCHED_ELEMENT_T *element,
  double score
);
bool has_matched_element_score(MATCHED_ELEMENT_T *element);
double get_matched_element_score(MATCHED_ELEMENT_T* element);
void set_matched_element_pvalue(
  MATCHED_ELEMENT_T *element,
  double pvalue
);
bool has_matched_element_pvalue(MATCHED_ELEMENT_T *element);
double get_matched_element_pvalue(MATCHED_ELEMENT_T* element);
bool has_matched_element_qvalue(MATCHED_ELEMENT_T *element);
double get_matched_element_qvalue(MATCHED_ELEMENT_T* element);
void set_matched_element_clusterid(
  MATCHED_ELEMENT_T *element,
  char *clusterid
);
char *get_matched_element_clusterid(MATCHED_ELEMENT_T* element);
const char *get_matched_element_sequence(MATCHED_ELEMENT_T* element);
void set_matched_element_strand(MATCHED_ELEMENT_T* element, char strand);
char get_matched_element_strand(MATCHED_ELEMENT_T* element);
SCANNED_SEQUENCE_T *get_matched_element_scanned_seq(MATCHED_ELEMENT_T* element);
void set_matched_element_sequence(MATCHED_ELEMENT_T* element, char *seq);